- Fix for not retrying read on 'EAGAIN' and 'EINTR' soft errors (Opsera Ltd)
- Improve error info by showing failed MySQL query in syslog (Opsera Ltd)
- Move database connections/disconnections syslog detail to DEBUG from INFO (Opsera Ltd)
- Allow externalcommands table to be trimmed with a specific time limit (Opsera Ltd)

1.4b8 - 07/16/2009
------------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b6 or higher
- Added additional error messages during failed startup
- Better MySQL library detection (Ton Voon, Herbert Straub, and Nagios Plugin Team)
- Removed Postgres options to configure script, as it is not yet supported
- Compiler flag fix for building on GNU/kFreeBSD systems (Hendrik Frenzel)
- Added lock_file option
- Fix debug file permission race (Lars Michelsen)
- More error reporting if debug file can not be opened
- Fix wait for childs on SIGCHLD
- Added long_output support
- Fix missing SIGTERM forwarding to childs
- Fix fmt specifier in ndo2db_daemonize()
- Escape custom values in 'customvariablestatus' and 'customvariables'
- Fix ndomod doesn't execute rotate_command propperly
- Fix several compiler warnings
- Rewrite ndo2db init script, install it with 'make install-init'



1.4b7 - 10/31/2007
-----------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b6
- Makefile fixes for compilation flags
- Fix for bug where service check table always had same start/end time
- Added sample init script for SLES (Bruno Quintais)
- Added --with-ndo2db-user and --with-ndo2db-group configure script options
- Fix for configfilevariables table not holding multiple entries for various variables
- Changed/added indexes on various DB tables
- Added some very basic debug file capabilities (not complete yet)
- Fix for handling (backwards) system time changes
- Fix for missing SUN_LEN definition and strtof() functions on Solaris 8 (Christian Masopust)
- Fix for segfault when importing duplicate log file entries (Hendrik Frenzel)