@@ -9,6 +9,7 @@ few of the many individuals that have contributed in various ways.
 
 Bernhard Reutner-Fischer
 Duncan Ferguson
+Jean Gabes
 Lars Michelsen
 Sascha Runschke
 Sébastien Aperghis-Tramoni
