@@ -54,6 +54,20 @@ tcp_port=5668
 
 
 
+# ENCRYPTION
+# This option determines if the ndo2db daemon will accept SSL to encrypt the 
+# network traffic between module and ndo2db daemon.
+# Both sides have to enable this feature which depends on SSL Libraries
+# like openssl or kerberos 
+# This option is only valid if the output type
+# option specified above is "tcpsocket".
+#
+# A value of '1' will enable this feature
+
+use_ssl=0
+
+
+
 # DATABASE SERVER TYPE
 # This option determines what type of DB server the daemon should
 # connect to.
