@@ -43,10 +43,24 @@ output=/usr/local/nagios/var/ndo.sock
 
 # TCP PORT
 # This option determines what port the module will connect to in
-# order to send output.  This option is only vlaid if the output type
+# order to send output.  This option is only valid if the output type
 # option specified above is "tcpsocket".
 
 tcp_port=5668
+
+
+
+# ENCRYPTION
+# This option determines if the module will use SSL to encrypt the 
+# network traffic between module and ndo2db daemon.
+# Both sides have to enable this feature which depends on SSL Libraries
+# like openssl or kerberos 
+# This option is only valid if the output type
+# option specified above is "tcpsocket".
+#
+# A value of '1' will enable this feature
+
+use_ssl=0
 
 
 
