@@ -264,6 +264,131 @@ INSTALL_OPTS="-o $ndo2db_user -g $ndo2db_group"
 AC_SUBST(INSTALL_OPTS)
 
 
+dnl Does user want to check for SSL?
+AC_ARG_ENABLE(ssl,--enable-ssl enables native SSL support,[
+	if test x$enableval = xyes; then
+		check_for_ssl=yes
+	else
+		check_for_ssl=no
+	fi
+	],check_for_ssl=yes)
+
+dnl Optional SSL library and include paths
+ssl_dir=
+ssl_inc_dir=
+ssl_lib_dir=
+AC_ARG_WITH(ssl,--with-ssl=DIR sets location of the SSL installation,[
+	ssl_dir=$withval
+	])
+AC_ARG_WITH(ssl-inc,--with-ssl-inc=DIR sets location of the SSL include files,[
+	ssl_inc_dir=$withval
+	])
+AC_ARG_WITH(ssl-lib,--with-ssl-lib=DIR sets location of the SSL libraries,[
+	ssl_lib_dir=$withval
+	])
+AC_ARG_WITH(kerberos-inc,--with-kerberos-inc=DIR sets location of the Kerberos include files,[
+	kerberos_inc_dir=$withval
+	])
+
+dnl Check for SSL support
+dnl Modified version of Mark Ethan Trostler's macro <trostler@juniper.net>
+if test x$check_for_ssl = xyes; then
+	AC_MSG_CHECKING(for SSL headers)
+	found_ssl=no
+	for dir in $ssl_inc_dir $ssl_dir /usr/local/openssl /usr/local/ssl /usr/lib/ssl /usr/ssl /usr/pkg /usr/local /usr /usr/freeware/lib/openssl; do
+		ssldir="$dir"
+		if test -f "$dir/include/openssl/ssl.h"; then
+			found_ssl=yes
+			CFLAGS="$CFLAGS -I$dir/include/openssl -I$ssldir/include"
+			sslincdir="$dir/include/openssl"
+		        break
+		fi
+		if test -f "$dir/include/ssl.h"; then
+			found_ssl=yes
+			CFLAGS="$CFLAGS -I$dir/include"
+			sslincdir="$dir/include"
+		        break
+		fi
+		if test -f "$dir/ssl.h"; then
+			found_ssl=yes
+			CFLAGS="$CFLAGS -I$dir"
+			sslincdir="$dir"
+			ssldir="$dir/.."
+		        break
+		fi
+		if test -f "$dir/openssl/ssl.h"; then
+			found_ssl=yes
+			CFLAGS="$CFLAGS -I$dir/openssl"
+			sslincdir="$dir/openssl"
+			ssldir="$dir/.."
+		        break
+		fi
+	done
+
+	if test x_$found_ssl != x_yes; then
+        	AC_MSG_ERROR(Cannot find ssl headers)
+	else
+
+	        printf "SSL headers found in $ssldir\n";
+
+		dnl Now try and find SSL libraries
+		AC_MSG_CHECKING(for SSL libraries)
+		found_ssl=no
+		for dir in $ssl_lib_dir $ssl_dir /usr/lib64 /usr/lib /usr/local/lib /usr/lib/ssl /usr/ssl/lib /usr/openssl/lib /usr/pkg/lib  /usr/freeware/lib/openssl; do
+			ssllibdir="$dir"
+			if test -f "$dir/libssl.so"; then
+				found_ssl=yes
+			        break
+			fi
+		done	
+
+		if test x_$found_ssl != x_yes; then
+        		AC_MSG_ERROR(Cannot find ssl libraries)
+		else
+		        printf "SSL libraries found in $ssllibdir\n";
+
+			LDFLAGS="$LDFLAGS -L$ssllibdir";
+		        LIBS="$LIBS -lssl -lcrypto";
+
+			AC_DEFINE_UNQUOTED(HAVE_SSL)
+			AC_SUBST(HAVE_SSL)
+	
+			dnl Generate DH parameters
+			echo ""
+			echo "*** Generating DH Parameters for SSL/TLS ***"
+			if test -f "$ssldir/sbin/openssl"; then
+				sslbin=$ssldir/sbin/openssl
+			else
+				sslbin=$ssldir/bin/openssl
+			fi
+			# awk to strip off meta data at bottom of dhparam output
+			$sslbin dhparam -C 512 | awk '/^-----/ {exit} {print}' > include/dh.h
+		fi
+	fi
+
+	dnl RedHat 8.0 and 9.0 include openssl compiled with kerberos, so we must include header file
+	AC_MSG_CHECKING(for Kerberos include files)
+	found_kerberos=no
+	for dir in $kerberos_inc_dir /usr/kerberos/include; do
+		kerbdir="$dir"
+		if test -f "$dir/krb5.h"; then
+			found_kerberos=yes
+			CFLAGS="$CFLAGS -I$kerbdir"
+			AC_DEFINE_UNQUOTED(HAVE_KRB5_H)
+			dnl AC_CHECK_HEADERS(krb5.h)
+			break
+		fi
+	done
+
+	if test x_$found_kerberos != x_yes; then
+		printf "could not find include files\n";
+	else
+		printf "found Kerberos include files in $kerbdir\n";
+	fi
+	
+
+fi
+
 
 AC_OUTPUT(Makefile src/Makefile subst)
 
