@@ -2,7 +2,7 @@
  * IO.C - NDO I/O Functions
  *
  * Copyright (c) 2009 Nagios Core Development Team and Community Contributors
- * Copyright (c) 2005-2006 Ethan Galstad 
+ * Copyright (c) 2005-2006 Ethan Galstad
  *
  * First Written: 05-20-2006
  *
@@ -12,6 +12,14 @@
 #include "../include/common.h"
 #include "../include/io.h"
 
+#ifdef HAVE_SSL
+SSL_METHOD *meth;
+SSL_CTX *ctx;
+SSL *ssl;
+int use_ssl=NDO_TRUE;
+#else
+int use_ssl=NDO_FALSE;
+#endif
 
 
 
@@ -80,7 +88,7 @@ int ndo_mmap_fclose(ndo_mmapfile *temp_mmapfile){
 	if(temp_mmapfile->path!=NULL)
 		free(temp_mmapfile->path);
 	free(temp_mmapfile);
-	
+
 	return NDO_OK;
         }
 
@@ -141,6 +149,7 @@ int ndo_sink_open(char *name, int fd, int type, int port, int flags, int *nfd){
 	struct hostent *hp=NULL;
 	mode_t mode=S_IRUSR | S_IWUSR | S_IRGRP | S_IWGRP;
 	int newfd=0;
+	int rc=0;
 
 	/* use file */
 	if(type==NDO_SINK_FILE){
@@ -167,8 +176,8 @@ int ndo_sink_open(char *name, int fd, int type, int port, int flags, int *nfd){
 			return NDO_ERROR;
 
 		/* copy the socket address/path */
-		strncpy(server_address_u.sun_path,name,sizeof(server_address_u.sun_path)); 
-		server_address_u.sun_family=AF_UNIX; 
+		strncpy(server_address_u.sun_path,name,sizeof(server_address_u.sun_path));
+		server_address_u.sun_family=AF_UNIX;
 
 		/* connect to the socket */
 		if((connect(newfd,(struct sockaddr *)&server_address_u,SUN_LEN(&server_address_u)))){
@@ -182,7 +191,24 @@ int ndo_sink_open(char *name, int fd, int type, int port, int flags, int *nfd){
 
 		if(name==NULL)
 			return NDO_ERROR;
-		
+
+#ifdef HAVE_SSL
+		if(use_ssl==NDO_TRUE){
+			SSL_library_init();
+			SSLeay_add_ssl_algorithms();
+			meth=SSLv23_client_method();
+			SSL_load_error_strings();
+
+			if((ctx=SSL_CTX_new(meth))==NULL){
+					printf("CHECK_NRPE: Error - could not create SSL context.\n");
+					return NDO_ERROR;
+			}
+			/* ADDED 01/19/2004 */
+			/* use only TLSv1 protocol */
+			SSL_CTX_set_options(ctx,SSL_OP_NO_SSLv2 | SSL_OP_NO_SSLv3);
+	}
+#endif
+
 		/* clear the address */
 		bzero((char *)&server_address_i,sizeof(server_address_i));
 
@@ -201,7 +227,7 @@ int ndo_sink_open(char *name, int fd, int type, int port, int flags, int *nfd){
 			return NDO_ERROR;
 
 		/* copy the host/ip address and port */
-		server_address_i.sin_family=AF_INET; 
+		server_address_i.sin_family=AF_INET;
 		server_address_i.sin_port=htons(port);
 
 		/* connect to the socket */
@@ -209,7 +235,25 @@ int ndo_sink_open(char *name, int fd, int type, int port, int flags, int *nfd){
 			close(newfd);
 			return NDO_ERROR;
 		        }
-	        }
+
+		#ifdef HAVE_SSL
+		if(use_ssl==NDO_TRUE){
+			if((ssl=SSL_new(ctx))!=NULL){
+				SSL_CTX_set_cipher_list(ctx,"ADH");
+				SSL_set_fd(ssl,newfd);
+				if((rc=SSL_connect(ssl))!=1){
+					printf("Error - Could not complete SSL handshake.\n");
+					SSL_CTX_free(ctx);
+					close(newfd);
+					return NDO_ERROR;
+				}
+			} else {
+				printf("CHECK_NRPE: Error - Could not create SSL connection structure.\n");
+				return NDO_ERROR;
+			}
+		}
+#endif
+		}
 
 	/* unknown sink type */
 	else
@@ -235,7 +279,13 @@ int ndo_sink_write(int fd, char *buf, int buflen){
 	while(tbytes<buflen){
 
 		/* try to write everything we have left */
-		result=write(fd,buf+tbytes,buflen-tbytes);
+		if (use_ssl == NDO_FALSE) {
+			result=write(fd, buf+tbytes, buflen-tbytes);
+		}
+		else{
+			result=SSL_write(ssl, buf+tbytes, buflen-tbytes);
+		}
+
 
 		/* some kind of error occurred */
 		if(result==-1){
@@ -320,11 +370,11 @@ int ndo_inet_aton(register const char *cp, struct in_addr *addr){
 			if(isascii((int)c) && isdigit((int)c)){
 				val=(val*base)+(c -'0');
 				c=*++cp;
-			        } 
+			        }
 			else if(base==16 && isascii((int)c) && isxdigit((int)c)){
 				val=(val<<4) | (c+10-(islower((int)c)?'a':'A'));
 				c = *++cp;
-			        } 
+			        }
 			else
 				break;
 		        }
@@ -341,7 +391,7 @@ int ndo_inet_aton(register const char *cp, struct in_addr *addr){
 				return (0);
 			*pp++=val;
 			c=*++cp;
-		        } 
+		        }
 		else
 			break;
 	        }
